monticore-generator/src/test/resources/cocos/invalid/A0113/A0113a.mc4
package cocos.invalid.A0113;

grammar A0113a {

    Sup implements ISuper = "a";

}